@@ -9,13 +9,14 @@ import (
 )
 
 type ConditionConfig struct {
-	Equals   *ConditionFields  `config:"equals"`
-	Contains *ConditionFields  `config:"contains"`
-	Regexp   *ConditionFields  `config:"regexp"`
-	Range    *ConditionFields  `config:"range"`
-	OR       []ConditionConfig `config:"or"`
-	AND      []ConditionConfig `config:"and"`
-	NOT      *ConditionConfig  `config:"not"`
+	Equals    *ConditionFields  `config:"equals"`
+	Contains  *ConditionFields  `config:"contains"`
+	Regexp    *ConditionFields  `config:"regexp"`
+	Range     *ConditionFields  `config:"range"`
+	HasFields []string          `config:"has_fields"`
+	OR        []ConditionConfig `config:"or"`
+	AND       []ConditionConfig `config:"and"`
+	NOT       *ConditionConfig  `config:"not"`
 }
 
 type ConditionFields struct {
